todo-client-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-client
  labels:
    app: todo-client
spec:
  ports:
  - name: http
    port: 8082
  selector:
    app: todo-client
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: todo-client
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-client
        version: v1
    spec:
      containers:
      - image: atsistemas/todo-client:latest
        imagePullPolicy: IfNotPresent
        name: todo-client
        ports:
        - containerPort: 8082
