todo-client-k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: todo-client-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-client
spec:
  hosts:
  - "*"
  gateways:
  - todo-client-gateway
  http:
  - match:
    route:
    - destination:
        host: todo-client
        port:
          number: 8082
